# pytestify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml
pytestify/: __main__.py  _ast_helpers.py  _main.py  _token_helpers.py
pytestify/fixes/: asserts.py  base_class.py  funcs.py  imports.py  method_name.py  raises.py
tests/: file_test.py  test_main.py
tests/fixes/: test_asserts.py  test_base_class.py  test_funcs.py  test_imports.py  test_method_name.py  test_raises.py
