[metadata]
name = pytestify
version = ???
description = ???
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dannysepler/pytestify
author = Danny Sepler
author_email = dannysepler@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    tokenize-rt>=4.0.0
python_requires = >=3.6.1

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[isort]
profile = django
